[ADD] New method SendMessage
